# diplom-cmake

./: .gitignore  CMakeLists.txt  create.docx
API/: API-var.h  CMakeLists.txt  XMLtoDOCX.cpp  XMLtoDOCX.h  rawfile.cpp  rawfile.h  xmlfile.cpp  xmlfile.h
API/docx/: CMakeLists.txt  HandleFunctions.txt  REDME.md  docx-data.h  docx.cpp  docx.h  file.qrc  handle-document.cpp  handle-document.h  handler-chart.cpp  handler-chart.h  handler-document.cpp  handler-document.h
API/docx/libary/zip/: CMakeLists.txt
Arduino_write/: Arduino_write.ino
TODO/TODO-docx/: document-0 — format.xml  document-0-format-origin-modif-note.xml  document-0-miify.xml  document-0.xml  УТВЕРЖДАЮ-minify.docx
TODO/modif/: document-0-format-modif.xml  document-0-modif.xml  document-0.1-modif-replace-format.xml  document-0.2-modif-replace-format — копия.xml  document-0.2-modif-replace-format.xml  document-0.2-modif-replace.xml  document-0.3-modif-replace-format-set.xml  document-0.3-modif-replace-format.xml  document-0.3-modif-replace-set.xml  document-0.4-modif-replace-format.xml  document-0.4-modif-replace-set.xml  document-0.4-modif-replace-test — копия.xml  document-0.4-modif-replace-test.xml  document-0.4-modif-replace.xml  template-0-modif.docx  template-0.1-modif-replace.docx  template-0.2-modif-replace.docx  template-0.3-modif-replace-set.docx  template-0.3-modif-replace.docx  template-0.4-modif-replace-set.docx  template-0.4-modif-replace-test.docx  template-0.4-modif-replace.docx  values.txt  ~$mplate-0.4-modif-replace.docx
TODO/origin/: document-0 — format.xml
TODO/ui/: design-commission-0.1.1.ui.autosave  widgets.ui
TODO/ui-todo/: CMakeLists.txt  LineEdit.cpp  LineEdit.h  PushButton.cpp  PushButton.h  SettingsUI.cpp  SettingsUI.h  design-commission-0.1.1.ui  design-commission-0.1.ui  main.cpp  mainwindow.cpp  widgets-0.1.ui  widgets.ui
TODO/ui-todo/UntitledProjectOk/: CMakeLists.txt  UntitledProjectOk.qmlproject.qtds
TODO/ui-todo/UntitledProjectOk/content/: Screen01.ui.qml  SpinBoxFloat.qml
TODO/ui-todo/UntitledProjectOk/imports/UntitledProjectOk/: CMakeLists.txt  qmldir
TODO/ui/UntitledProject/content/: Screen01.ui.qml
TODO/ui/UntitledProjectOk/: UntitledProjectOk.qmlproject  qmlmodules
TODO/ui/UntitledProjectOk/content/: App.qml
TODO/ui/UntitledProjectOk/imports/: CMakeLists.txt
TODO/ui/UntitledProjectOk/imports/UntitledProjectOk/designer/: plugin.metainfo
TODO/ui/UntitledProjectOk/src/: import_qml_plugins.h
assets/: README.md  template-0.1.docx  template-0.2.docx  template-0.docx  ~$mplate-0.docx
assets/styles/: common.qss  qcommbobox.qss  qpushbutton.qss  qscrollarea.qss
error/: CMakeLists.txt  error.h
main/: CMakeLists.txt  cmdchart.cpp  cmdchart.h  data.txt  file.qrc  global-var.h  main-file.qrc  main.cpp  preloader.cpp  preloader.h  shared-func.cpp
main/UI/: CMakeLists.txt  DialogCommission.cpp  DialogCommission.h  DialogConverter.cpp  DialogConverter.h  LineEdit.cpp  LineEdit.h  PushButton.cpp  PushButton.h  UI-var.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget-xml.cpp  widget-xml.h  widgetchart.cpp  widgetchart.h  widgetmain.cpp  widgetmain.h
main/model/: CMakeLists.txt  n-model.cpp  n-model.h
main/preloader/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  InitDialogCommission.cpp  InitDialogCommission.h  InitDialogConverter.cpp  InitDialogConverter.h  init-widget-chart.cpp  init-widget-chart.h  init-widget-main.cpp  init-widget-main.h  initStyles.cpp  initStyles.h  preloader-var.h
main/shared-func/: shared-func.cpp  shared-func.h
math-logic/: CMakeLists.txt  math-logic-func.h  math-logic.cpp  math-logic.h  math-var.h  smath.h
smath/: CMakeLists.txt  smath.cpp  smath.h
tests/: CMakeLists.txt  math-logic-test.cpp
tests/docx-test/: CMakeLists.txt  data-docx-test.cpp  data-docx-test.h  debug-config.h.in  debug-test.cpp  docx-data-test.cpp  docx-data-test.h  docx-test.cpp  file-debug.qrc  file-test.qrc  file.qrc
tests/docx-test/assets/: chart1-0.xml  chart1-1.xml  chart2-0.xml  chart2-1.xml  document-0-handler.xml  document-0.xml  document-right-1,5.xml  document-right-1.xml  document-right-2.xml  УТВЕРЖДАЮ — копия.docx  УТВЕРЖДАЮ.docx
tests/math-logic-test/: CMakeLists.txt  math-logic-test.cpp
tests/raw-file-test/: CMakeLists.txt  file.qrc  raw-file-test.cpp
tests/raw-file-test/audio/: triangle_mono_44100_16bit.raw
tests/smath-test/: CMakeLists.txt  smath-test.cpp
